fix: overflow

--- a/src/App.css
+++ b/src/App.css
@@ -94,8 +94,8 @@ body {
   width: 100%;
   height: 100dvh;
   position: absolute;
-  top: 0%;
-  left: 13%;
+  top: 0;
+  left: 0;
   opacity: 1;
   z-index: -1;
   overflow: hidden;
