--- a/src/components/Motion/Orb/Orb.css
+++ b/src/components/Motion/Orb/Orb.css
@@ -2,13 +2,22 @@
   position: relative;
   background-color: transparent !important;
   z-index: 2;
-  width: 140%;
-  height: 140%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .orb-container canvas {
   background: transparent !important;
   display: block;
+  transform-origin: center center;
+  transform: scale(1.7);
+  position: absolute;
+  top: 30%;
+  left: 30%;
+
+  width: 100%;
+  height: 100%;
 }
 
 .orb-loading::before {
@@ -38,5 +47,10 @@
 @media (max-width: 768px) {
   .orb-container {
     margin-top: 12rem;
+  }
+  .orb-container canvas {
+    transform: scale(1.5);
+    top: 30%;
+    left: 40%;
   }
 }
